[package]
name = "agent-smith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm-chain = { git = "https://github.com/sobelio/llm-chain.git", version = "0.8.1" }
llm-chain-openai = { git = "https://github.com/sobelio/llm-chain.git", version = "0.8.1" }
tokio = { version = "1.28.0", features = ["full"] }
