[package]
name = "agent-smith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm-chain = "0.8.2"
llm-chain-llama = "0.8.2"
llm-chain-openai = "0.8.2"
tokio = { version = "1.28.0", features = ["full"] }
